# BetaFund-CareCompanion

./: .env  .gitignore  README.md  SKILLS.md  main.py  package-lock.json  package.json  project.json.example  pyproject.toml
app/: auth.py  config.py  database.py
app/agents/: daily_checkin.py  monthly_report.py  onboarding.py  scheduling.py
app/models/: alert.py  checkin.py  senior.py
app/routers/: agents.py  alerts.py  checkins.py  memories.py  seniors.py  services.py  webhooks.py
app/services/: alert_engine.py  bland_ai.py  call_analyzer.py  inbound.py  memory.py  scheduler.py  service_directory.py
care-companion-ui/: package-lock.json  package.json
care-companion-ui/public/dashboard/: app.js
care-companion-ui/src/app/: globals.css  page.tsx
care-companion-ui/src/components/: AgenticAIFeatures.tsx  CTA.tsx  HeroCarousel.tsx  IndustryFacts.tsx  Navigation.tsx
carecompanion-skill/: SKILL.md  shipables.json
crawling_agent/: browser_agent.py  dermatologists_data.csv  doctors_data.csv
docs/: architecture.html
fastapi-backend/: main.py
frontend/: app.js  index.html  style.css
insforge/functions/alerts-api/: index.ts
insforge/functions/call-api/: index.ts
insforge/functions/checkins-api/: index.ts
insforge/functions/memories-api/: index.ts
insforge/functions/providers-api/: index.ts
insforge/functions/reports-api/: index.ts
insforge/functions/seniors-api/: index.ts
scripts/: seed_data.py
tests/: test_agents.py  test_alert_engine.py  test_api.py  test_call_analyzer.py  test_database.py  test_service_directory.py
(+7 files in other folders)
